# settlement-management

./: .gitignore  README.md  package-lock.json  package.json
client/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  dev.db
client/src-tauri/src/commands/app/: mod.rs
client/src-tauri/src/commands/logging/: logging_commands.rs
client/src-tauri/src/commands/system/subtype/: mod.rs  sys_add_group_to_subtype.rs  sys_create_sub_type.rs  sys_delete_sub_type.rs  sys_reorder_group_properties.rs
client/src-tauri/src/commands/user/backlinks/: update_backlink.rs
client/src-tauri/src/commands/user/entry/: search_entries.rs  search_fts.rs  update_entry_groups.rs
client/src-tauri/src/commands/user/glossary/: create_glossary.rs  update_glossary.rs
client/src-tauri/src/commands/user/nodes/: create_node_and_entry.rs
client/src-tauri/src/commands/user/subtype/: create_sub_type.rs  create_sub_type_group.rs  create_sub_type_property.rs  delete_sub_type.rs  delete_sub_type_group.rs  get_sub_type_groups.rs  get_sub_types.rs  mod.rs  remove_group_from_sub_type.rs  update_sub_type.rs  (+1 more)
client/src-tauri/src/entities/: system_sub_type.rs  system_sub_type_schema_group.rs  user_backlink_index.rs  user_glossary_entry_metadata.rs  user_sub_type.rs  user_sub_type_group_property.rs  user_sub_type_schema_group.rs  user_tiers.rs  users.rs
client/src-tauri/src/entries/: generate_form_source.rs  mod.rs
client/src-tauri/src/sync/: example.rs
client/src-tauri/src/types/: example.rs  glossary_common.rs  mod.rs  newtypes.rs  users.rs
client/src-tauri/src/utility/: mod.rs
(+1907 files in other folders)
